--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -149,10 +149,12 @@ const title = `Support DDEV`
             href="https://twitter.com/hashtag/ddev?src=hash&ref_src=twsrc%5Etfw"
             >#ddev</a
           > , one of my most used tools. <a href="https://t.co/9dPAs8BTqg"
-            >pic.twitter.com/9dPAs8BTqg</a>
+            >pic.twitter.com/9dPAs8BTqg</a
+          >
         </p>&mdash; Novák Áron (@NovakAron) <a
           href="https://twitter.com/NovakAron/status/1541396362885054465?ref_src=twsrc%5Etfw"
-          >June 27, 2022</a>
+          >June 27, 2022</a
+        >
       </blockquote>
       <script
         async
