--- a/src/components/SoftwareLogos.astro
+++ b/src/components/SoftwareLogos.astro
@@ -1,29 +1,36 @@
-<div class="bg-white opacity-60">
+---
+---
+
+<div class="opacity-60">
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
     <div class="flex justify-center content-center flex-wrap">
       <div class="p-10">
-        <img class="h-12" src="/logos/php.svg" alt="" />
+        <img class="h-12" src="/logos/php.svg" alt="PHP logo" />
       </div>
       <div class="p-10 mt-2">
-        <img class="h-6" src="/logos/node.svg" alt="" />
+        <img class="h-6" src="/logos/node.svg" alt="Node.js logo" />
       </div>
       <div class="p-10">
-        <img class="h-16 -mt-4" src="/logos/mysql.svg" alt="" />
+        <img class="h-16 -mt-4" src="/logos/mysql.svg" alt="MySQL logo" />
       </div>
       <div class="p-10">
-        <img class="h-8 mt-1" src="/logos/postgresql.png" alt="" />
+        <img
+          class="h-8 mt-1"
+          src="/logos/postgresql.png"
+          alt="PostgreSQL logo"
+        />
       </div>
       <div class="p-10">
-        <img class="h-4 mt-3" src="/logos/nginx.svg" alt="" />
+        <img class="h-4 mt-3" src="/logos/nginx.svg" alt="nginx logo" />
       </div>
       <div class="p-10">
-        <img class="h-4 mt-3" src="/logos/apache.svg" alt="" />
+        <img class="h-4 mt-3" src="/logos/apache.svg" alt="Apache logo" />
       </div>
       <div class="p-10">
-        <img class="h-5 mt-2" src="/logos/redis.svg" alt="" />
+        <img class="h-5 mt-2" src="/logos/redis.svg" alt="Redis logo" />
       </div>
       <div class="p-10">
-        <img class="h-5 mt-2" src="/logos/memcached.svg" alt="" />
+        <img class="h-5 mt-2" src="/logos/memcached.svg" alt="Memcached logo" />
       </div>
     </div>
   </div>
