Tame the quotes.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,12 +12,12 @@ const title = `About DDEV`
     <PostBody>
       <p>
         DDEV is a local development environment for web developers. It
-        originated within the company "Drud" in about 2016. Drud was building a
+        originated within the company “Drud” in about 2016. Drud was building a
         general-purpose CLI for its infant web hosting product (named
-        "DDEV-Live", with the local dev tool named "DDEV-Local"), and the and
+        “DDEV-Live”, with the local dev tool named “DDEV-Local”), and the and
         was visionary enough to build local development into the idea. (Nobody
-        really remembers what "DDEV" stands for, it might be "Docker
-        development" or it might have been "Drud development".)
+        really remembers what “DDEV” stands for, it might be “Docker
+        development” or it might have been “Drud development”.)
       </p>
 
       <p>
@@ -27,12 +27,12 @@ const title = `About DDEV`
         as a long-time proponent of local development and debugging was sold on
         its value. Drud graciously sponsored Randy to work on DDEV for nearly
         five years, until it lost its funding. DDEV of course had integration to
-        Drud's hosting product during this period, and it was seen as a way to
+        Drud’s hosting product during this period, and it was seen as a way to
         bring developers into the Drud-hosting world.
       </p>
 
       <p>
-        The company Drud (by then renamed "DDEV") shut down in 2021 when it lost
+        The company Drud (by then renamed “DDEV”) shut down in 2021 when it lost
         its venture funding. Randy Fay continued to maintain the project without
         interruption.
       </p>
