Add rough full-site search.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,9 @@ import { MagnifyingGlassIcon } from "@heroicons/react/24/solid/index.js"
           <a class="font-bold" href="/support-ddev">❤️ Support DDEV</a>
         </li>
       </ul>
-      <a href="" class="ml-4"><MagnifyingGlassIcon className="w-6 h-6" /></a>
+      <a href="/search" class="ml-4"
+        ><MagnifyingGlassIcon className="w-6 h-6" />
+      </a>
     </div>
   </nav>
 </header>
