--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config"
 export interface Props {
   title: string
   description?: string
+  noindex?: boolean
+  nofollow?: boolean
 }
 
-const { title, description = SITE_DESCRIPTION } = Astro.props
+const {
+  title,
+  description = SITE_DESCRIPTION,
+  noindex = false,
+  nofollow = false,
+} = Astro.props
 const canonicalUrl = Astro.url.toString()
 
 import "../styles/global.css"
@@ -26,6 +33,8 @@ import "../styles/global.css"
       title={title}
       description={description}
       canonical={canonicalUrl}
+      noindex={noindex}
+      nofollow={nofollow}
       openGraph={{
         url: canonicalUrl,
         title: title,
@@ -34,7 +43,8 @@ import "../styles/global.css"
         images: [],
       }}
     />
-    <script defer data-domain="ddev.com" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="ddev.com" src="https://plausible.io/js/script.js"
+    ></script>
   </head>
   <body>
     <Header />
