--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -16,7 +16,7 @@ const title = `Search`
 
   // Load the statically-built file in the `dist/` directory for local development
   const indexPath =
-    env === "development" ? "../../dist/search.json" : "./search.json"
+    env === "development" ? "../../dist/search.json" : "/search.json"
 
   const inputElement = document.getElementById("search-keywords")
   const resultsContainer = document.getElementById("results")
