--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro"
 import Heading from "../components/Heading.astro"
-import Icon from "../components/Icon.astro"
+import OsPicker from "../components/OsPicker.astro"
 import Terminal from "../components/Terminal.astro"
 import { Tabs } from "astro-tabs"
 import { Code } from "astro/components"
@@ -12,157 +12,15 @@ const title = "Get Started with DDEV"
 const codeTheme = "nord"
 ---
 
-<style lang="postcss">
-  input[type="radio"]:checked + label {
-    @apply font-bold border-blue-300 shadow;
-  }
-
-  input[value="mac"]:checked + label {
-    @apply border;
-  }
-
-  input[value="windows"]:checked + label {
-    @apply border;
-  }
-
-  .content-panel {
-    @apply mt-16;
-  }
-</style>
-
-<script>
-  const hash = window.location.hash ?? null
-  const osRadioButtons = document.querySelectorAll('input[name="os"]')
-  const instructionDivs = document.querySelectorAll("div[data-os]")
-
-  let options = new Array()
-  let selectedOs
-
-  const showInstructions = (os) => {
-    instructionDivs.forEach((element) => {
-      if (element.getAttribute("data-os") === os) {
-        element.classList.remove("hidden")
-      } else {
-        element.classList.add("hidden")
-      }
-    })
-  }
-
-  const selectOs = (os) => {
-    osRadioButtons.forEach((element) => {
-      element.checked = element.value === os
-    })
-    showInstructions(os)
-  }
-
-  // https://stackoverflow.com/a/38241481/897279
-  function getOS() {
-    var userAgent = window.navigator.userAgent,
-      platform =
-        window.navigator?.userAgentData?.platform || window.navigator.platform,
-      macosPlatforms = ["Macintosh", "MacIntel", "MacPPC", "Mac68K"],
-      windowsPlatforms = ["Win32", "Win64", "Windows", "WinCE"],
-      os = null
-
-    if (macosPlatforms.indexOf(platform) !== -1) {
-      os = "mac"
-    } else if (windowsPlatforms.indexOf(platform) !== -1) {
-      os = "windows"
-    } else if (/Linux/.test(platform)) {
-      os = "linux"
-    }
-
-    return os
-  }
-
-  osRadioButtons.forEach((element) => {
-    options.push(element.getAttribute("value"))
-    element.addEventListener("change", (event) => {
-      selectedOs = event.target.value
-      showInstructions(selectedOs)
-    })
-  })
-
-  if (hash) {
-    const bareHash = hash.replace("#", "")
-    if (options.includes(bareHash)) {
-      selectOs(bareHash)
-    }
-  } else {
-    const os = getOS()
-
-    if (os) {
-      selectOs(os)
-    }
-  }
-</script>
-
 <Layout title={title}>
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={title} subtitle={`Install and start using DDEV.`} />
-    <div class="prose">
-      <div class="choose">
-        <h2>Choose your operating system:</h2>
-        <div class="choose-os flex">
-          <div class="w-full">
-            <input
-              id="os-mac"
-              type="radio"
-              name="os"
-              value="mac"
-              class="hidden"
-            />
-            <label
-              class="block w-full text-center border-y border-l rounded-l py-4 select-none cursor-pointer"
-              for="os-mac"
-            >
-              <span class="inline-block w-4 h-4 relative" style="top: 2px"
-                ><Icon name="Apple" />
-              </span>
-              Mac</label
-            >
-          </div>
-          <div class="w-full">
-            <input
-              id="os-windows"
-              name="os"
-              type="radio"
-              value="windows"
-              class="hidden"
-            />
-            <label
-              class="block w-full text-center border py-4 select-none cursor-pointer"
-              for="os-windows"
-            >
-              <span class="inline-block w-4 h-4 relative" style="top: 2px"
-                ><Icon name="Windows" />
-              </span>
-              Windows</label
-            >
-          </div>
-          <div class="w-full">
-            <input
-              id="os-linux"
-              type="radio"
-              name="os"
-              value="linux"
-              class="hidden"
-            />
-            <label
-              class="block w-full text-center border-y border-r rounded-r py-4 select-none cursor-pointer"
-              for="os-linux"
-            >
-              <span class="inline-block w-4 h-4 relative" style="top: 2px"
-                ><Icon name="Linux" />
-              </span>
-
-              Linux</label
-            >
-          </div>
-        </div>
-      </div>
+    <div class="prose mb-16">
+      <OsPicker heading={`Choose your operating system:`} />
     </div>
-    <div data-os="mac" class="content-panel hidden">
+
+    {/* Mac instructions */}
+    <div data-os="mac" class="hidden">
       <div class="prose">
         <h2 class="text-3xl mt-24">
           <small class="block font-mono text-xs text-gray-500">1/3</small
@@ -406,6 +264,8 @@ const codeTheme = "nord"
         </aside>
       </div>
     </div>
+
+    {/* Windows instructions */}
     <div data-os="windows" class="hidden">
       <div class="prose">
         <h2 class="text-3xl mt-24">
@@ -440,6 +300,8 @@ const codeTheme = "nord"
         </aside>
       </div>
     </div>
+
+    {/* Linux instructions */}
     <div data-os="linux" class="hidden">
       <div class="prose">
         <h2 class="text-3xl mt-24">
